--- a/DualScreenExamples.XF/DualScreenExamples.XF/DetailsView.xaml
+++ b/DualScreenExamples.XF/DualScreenExamples.XF/DetailsView.xaml
@@ -7,7 +7,7 @@
              x:Class="DualScreenExamples.XF.DetailsView">
   <ContentView.Content>
       <StackLayout>
-          <Label Text="Hello Xamarin.Forms!" />
+          <Label x:Name="labelDescription" />
       </StackLayout>
   </ContentView.Content>
 </ContentView>
